added router store

--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -19,7 +19,7 @@
             <i class="fa fa-key"></i>
           </span>
           <input
-            pInputText
+            pPassword
             type="password"
             placeholder="password"
             formControlName="password"
