--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-auth></app-auth>
+<p-toast></p-toast>
+<app-navbar></app-navbar>
+<!-- <app-auth></app-auth> -->
+<router-outlet></router-outlet>
