--- a/src/app/features/idea/ideas/idea/idea.component.html
+++ b/src/app/features/idea/ideas/idea/idea.component.html
@@ -7,7 +7,7 @@
     </div>
 
     <h2 class="Idea-header">
-      {{ idea.idea }}
+      <a [routerLink]="['/ideas', idea.id]">{{ idea.idea }}</a>
     </h2>
   </div>
 
@@ -17,6 +17,10 @@
     <p>
       Created by <a>{{ idea.author.username }}</a> on {{ idea.created | date }}
     </p>
-    <p>comments: ({{ idea.comments.length || 0 }})</p>
+    <p>
+      <a [routerLink]="['/ideas', idea.id]">
+        comments: ({{ idea.comments.length || 0 }})
+      </a>
+    </p>
   </div>
 </p-card>
